Minor fix in the sidebar

--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -65,7 +65,7 @@
         <div class="row-fluid">
           <div class="col-lg-12 col-sm-12">
             <div class="pull-right">
-              <a href="" class="btn btn-sm btn-info"><em class="icon icon-pencil2"></em>&nbsp; Edit form</a>
+              <a ng-href="{{getFormLink(currentForm)}}" class="btn btn-sm btn-info"><em class="icon icon-pencil2"></em>&nbsp; Edit form</a>
               &nbsp;&nbsp;&nbsp;
               <a href="" class="btn btn-sm btn-warning"><em class="icon icon-eye"></em>&nbsp;  View Responses</a>
             </div>
