--- a/client/index.html
+++ b/client/index.html
@@ -79,25 +79,28 @@
           <script src="app/account/login/login.js"></script>
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
-          <script src="app/admin/admin.js"></script>
-          <script src="app/attachCertificate/attachCertificate.js"></script>
-          <script src="app/certificate/certificate.js"></script>
-          <script src="app/certificateData/certificateData.js"></script>
-          <script src="app/conditionSettings/conditionSettings.js"></script>
-          <script src="app/create/create.js"></script>
-          <script src="app/createCertificate/createCertificate.js"></script>
-          <script src="app/fieldElement/fieldElement.js"></script>
-          <script src="app/fields/fields.js"></script>
-          <script src="app/formData/formData.js"></script>
-          <script src="app/forms/forms.js"></script>
-          <script src="app/formshow/formshow.js"></script>
-          <script src="app/main/main.js"></script>
-          <script src="app/na/na.js"></script>
-          <script src="app/options/options.js"></script>
-          <script src="app/prevElement/prevElement.js"></script>
-          <script src="app/results/results.js"></script>
-          <script src="app/sectionData/sectionData.js"></script>
-          <script src="app/typeBadge/typeBadge.js"></script>
+          <script src="app/common/common.js"></script>
+          <script src="app/controllers/admin/admin.js"></script>
+          <script src="app/controllers/attachCertificate/attachCertificate.js"></script>
+          <script src="app/controllers/certificate/certificate.js"></script>
+          <script src="app/controllers/create/create.js"></script>
+          <script src="app/controllers/createCertificate/createCertificate.js"></script>
+          <script src="app/controllers/fields/fields.js"></script>
+          <script src="app/controllers/forms/forms.js"></script>
+          <script src="app/controllers/formshow/formshow.js"></script>
+          <script src="app/controllers/main/main.js"></script>
+          <script src="app/controllers/options/options.js"></script>
+          <script src="app/controllers/results/results.js"></script>
+          <script src="app/directives/conditionSettings/conditionSettings.js"></script>
+          <script src="app/directives/fieldElement/fieldElement.js"></script>
+          <script src="app/directives/na/na.js"></script>
+          <script src="app/directives/nuggets.js"></script>
+          <script src="app/directives/nuggets/nuggets.js"></script>
+          <script src="app/directives/prevElement/prevElement.js"></script>
+          <script src="app/directives/typeBadge/typeBadge.js"></script>
+          <script src="app/services/certificateData/certificateData.js"></script>
+          <script src="app/services/formData/formData.js"></script>
+          <script src="app/services/sectionData/sectionData.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/modal/modal.js"></script>
