Adding the accounts menu

--- a/client/assets/fonts/icons.html
+++ b/client/assets/fonts/icons.html
@@ -2205,783 +2205,788 @@
 }
 
 
-.icon-powercord:before {
+.icon-power-off:before {
 	content:"\f2a8";
 }
 
 
-.icon-previous:before {
+.icon-powercord:before {
 	content:"\f2a9";
 }
 
 
-.icon-print:before {
+.icon-previous:before {
 	content:"\f2aa";
 }
 
 
-.icon-profile:before {
+.icon-print:before {
 	content:"\f2ab";
 }
 
 
-.icon-pushpin:before {
+.icon-profile:before {
 	content:"\f2ac";
 }
 
 
-.icon-qrcode:before {
+.icon-pushpin:before {
 	content:"\f2ad";
 }
 
 
-.icon-question-mark:before {
+.icon-qrcode:before {
 	content:"\f2ae";
 }
 
 
-.icon-question:before {
+.icon-question-mark:before {
 	content:"\f2af";
 }
 
 
-.icon-quill:before {
+.icon-question:before {
 	content:"\f2b0";
 }
 
 
-.icon-quotes-left:before {
+.icon-quill:before {
 	content:"\f2b1";
 }
 
 
-.icon-radio-checked:before {
+.icon-quotes-left:before {
 	content:"\f2b2";
 }
 
 
-.icon-radio-unchecked:before {
+.icon-radio-checked:before {
 	content:"\f2b3";
 }
 
 
-.icon-rain:before {
+.icon-radio-unchecked:before {
 	content:"\f2b4";
 }
 
 
-.icon-read-more:before {
+.icon-rain:before {
 	content:"\f2b5";
 }
 
 
-.icon-reddit:before {
+.icon-read-more:before {
 	content:"\f2b6";
 }
 
 
-.icon-redo:before {
+.icon-reddit:before {
 	content:"\f2b7";
 }
 
 
-.icon-redo2:before {
+.icon-redo:before {
 	content:"\f2b8";
 }
 
 
-.icon-reload-alt:before {
+.icon-redo2:before {
 	content:"\f2b9";
 }
 
 
-.icon-reload:before {
+.icon-reload-alt:before {
 	content:"\f2ba";
 }
 
 
-.icon-remove:before {
+.icon-reload:before {
 	content:"\f2bb";
 }
 
 
-.icon-remove2:before {
+.icon-remove:before {
 	content:"\f2bc";
 }
 
 
-.icon-reply:before {
+.icon-remove2:before {
 	content:"\f2bd";
 }
 
 
-.icon-right-quote-alt:before {
+.icon-reply:before {
 	content:"\f2be";
 }
 
 
-.icon-right-quote:before {
+.icon-right-quote-alt:before {
 	content:"\f2bf";
 }
 
 
-.icon-righttoleft:before {
+.icon-right-quote:before {
 	content:"\f2c0";
 }
 
 
-.icon-road:before {
+.icon-righttoleft:before {
 	content:"\f2c1";
 }
 
 
-.icon-rocket:before {
+.icon-road:before {
 	content:"\f2c2";
 }
 
 
-.icon-rss-alt:before {
+.icon-rocket:before {
 	content:"\f2c3";
 }
 
 
-.icon-rss:before {
+.icon-rss-alt:before {
 	content:"\f2c4";
 }
 
 
-.icon-sad:before {
+.icon-rss:before {
 	content:"\f2c5";
 }
 
 
-.icon-sad2:before {
+.icon-sad:before {
 	content:"\f2c6";
 }
 
 
-.icon-safari:before {
+.icon-sad2:before {
 	content:"\f2c7";
 }
 
 
-.icon-scissors:before {
+.icon-safari:before {
 	content:"\f2c8";
 }
 
 
-.icon-screen:before {
+.icon-scissors:before {
 	content:"\f2c9";
 }
 
 
-.icon-search:before {
+.icon-screen:before {
 	content:"\f2ca";
 }
 
 
-.icon-settings:before {
+.icon-search:before {
 	content:"\f2cb";
 }
 
 
-.icon-share:before {
+.icon-settings:before {
 	content:"\f2cc";
 }
 
 
-.icon-shield:before {
+.icon-share:before {
 	content:"\f2cd";
 }
 
 
-.icon-shocked:before {
+.icon-shield:before {
 	content:"\f2ce";
 }
 
 
-.icon-shocked2:before {
+.icon-shocked:before {
 	content:"\f2cf";
 }
 
 
-.icon-shuffle:before {
+.icon-shocked2:before {
 	content:"\f2d0";
 }
 
 
-.icon-sigma:before {
+.icon-shuffle:before {
 	content:"\f2d1";
 }
 
 
-.icon-signup:before {
+.icon-sigma:before {
 	content:"\f2d2";
 }
 
 
-.icon-skype:before {
+.icon-signup:before {
 	content:"\f2d3";
 }
 
 
-.icon-smiley:before {
+.icon-skype:before {
 	content:"\f2d4";
 }
 
 
-.icon-smiley2:before {
+.icon-smiley:before {
 	content:"\f2d5";
 }
 
 
-.icon-soundcloud:before {
+.icon-smiley2:before {
 	content:"\f2d6";
 }
 
 
-.icon-soundcloud2:before {
+.icon-soundcloud:before {
 	content:"\f2d7";
 }
 
 
-.icon-spades:before {
+.icon-soundcloud2:before {
 	content:"\f2d8";
 }
 
 
-.icon-spam:before {
+.icon-spades:before {
 	content:"\f2d9";
 }
 
 
-.icon-spell-check:before {
+.icon-spam:before {
 	content:"\f2da";
 }
 
 
-.icon-spin-alt:before {
+.icon-spell-check:before {
 	content:"\f2db";
 }
 
 
-.icon-spin:before {
+.icon-spin-alt:before {
 	content:"\f2dc";
 }
 
 
-.icon-spinner:before {
+.icon-spin:before {
 	content:"\f2dd";
 }
 
 
-.icon-spinner2:before {
+.icon-spinner:before {
 	content:"\f2de";
 }
 
 
-.icon-spinner3:before {
+.icon-spinner2:before {
 	content:"\f2df";
 }
 
 
-.icon-spinner4:before {
+.icon-spinner3:before {
 	content:"\f2e0";
 }
 
 
-.icon-spinner5:before {
+.icon-spinner4:before {
 	content:"\f2e1";
 }
 
 
-.icon-spinner6:before {
+.icon-spinner5:before {
 	content:"\f2e2";
 }
 
 
-.icon-stack:before {
+.icon-spinner6:before {
 	content:"\f2e3";
 }
 
 
-.icon-stackoverflow:before {
+.icon-stack:before {
 	content:"\f2e4";
 }
 
 
-.icon-star:before {
+.icon-stackoverflow:before {
 	content:"\f2e5";
 }
 
 
-.icon-star2:before {
+.icon-star:before {
 	content:"\f2e6";
 }
 
 
-.icon-star3:before {
+.icon-star2:before {
 	content:"\f2e7";
 }
 
 
-.icon-stats:before {
+.icon-star3:before {
 	content:"\f2e8";
 }
 
 
-.icon-steam:before {
+.icon-stats:before {
 	content:"\f2e9";
 }
 
 
-.icon-steam2:before {
+.icon-steam:before {
 	content:"\f2ea";
 }
 
 
-.icon-steering-wheel:before {
+.icon-steam2:before {
 	content:"\f2eb";
 }
 
 
-.icon-stop:before {
+.icon-steering-wheel:before {
 	content:"\f2ec";
 }
 
 
-.icon-stop2:before {
+.icon-stop:before {
 	content:"\f2ed";
 }
 
 
-.icon-stopwatch:before {
+.icon-stop2:before {
 	content:"\f2ee";
 }
 
 
-.icon-storage:before {
+.icon-stopwatch:before {
 	content:"\f2ef";
 }
 
 
-.icon-strikethrough:before {
+.icon-storage:before {
 	content:"\f2f0";
 }
 
 
-.icon-stumbleupon:before {
+.icon-strikethrough:before {
 	content:"\f2f1";
 }
 
 
-.icon-stumbleupon2:before {
+.icon-stumbleupon:before {
 	content:"\f2f2";
 }
 
 
-.icon-sun-fill:before {
+.icon-stumbleupon2:before {
 	content:"\f2f3";
 }
 
 
-.icon-sun-stroke:before {
+.icon-sun-fill:before {
 	content:"\f2f4";
 }
 
 
-.icon-support:before {
+.icon-sun-stroke:before {
 	content:"\f2f5";
 }
 
 
-.icon-switch:before {
+.icon-support:before {
 	content:"\f2f6";
 }
 
 
-.icon-tab:before {
+.icon-switch:before {
 	content:"\f2f7";
 }
 
 
-.icon-table:before {
+.icon-tab:before {
 	content:"\f2f8";
 }
 
 
-.icon-table2:before {
+.icon-table:before {
 	content:"\f2f9";
 }
 
 
-.icon-tablet:before {
+.icon-table2:before {
 	content:"\f2fa";
 }
 
 
-.icon-tag-fill:before {
+.icon-tablet:before {
 	content:"\f2fb";
 }
 
 
-.icon-tag-stroke:before {
+.icon-tag-fill:before {
 	content:"\f2fc";
 }
 
 
-.icon-tag:before {
+.icon-tag-stroke:before {
 	content:"\f2fd";
 }
 
 
-.icon-tags:before {
+.icon-tag:before {
 	content:"\f2fe";
 }
 
 
-.icon-target:before {
+.icon-tags:before {
 	content:"\f2ff";
 }
 
 
-.icon-text-height:before {
+.icon-target:before {
 	content:"\f300";
 }
 
 
-.icon-text-width:before {
+.icon-text-height:before {
 	content:"\f301";
 }
 
 
-.icon-thumbs-up:before {
+.icon-text-width:before {
 	content:"\f302";
 }
 
 
-.icon-thumbs-up2:before {
+.icon-thumbs-up:before {
 	content:"\f303";
 }
 
 
-.icon-ticket:before {
+.icon-thumbs-up2:before {
 	content:"\f304";
 }
 
 
-.icon-tongue:before {
+.icon-ticket:before {
 	content:"\f305";
 }
 
 
-.icon-tongue2:before {
+.icon-tongue:before {
 	content:"\f306";
 }
 
 
-.icon-transfer:before {
+.icon-tongue2:before {
 	content:"\f307";
 }
 
 
-.icon-trash-fill:before {
+.icon-transfer:before {
 	content:"\f308";
 }
 
 
-.icon-trash-stroke:before {
+.icon-trash-fill:before {
 	content:"\f309";
 }
 
 
-.icon-tree:before {
+.icon-trash-stroke:before {
 	content:"\f30a";
 }
 
 
-.icon-trophy:before {
+.icon-tree:before {
 	content:"\f30b";
 }
 
 
-.icon-truck:before {
+.icon-trophy:before {
 	content:"\f30c";
 }
 
 
-.icon-tumblr:before {
+.icon-truck:before {
 	content:"\f30d";
 }
 
 
-.icon-tumblr2:before {
+.icon-tumblr:before {
 	content:"\f30e";
 }
 
 
-.icon-tux:before {
+.icon-tumblr2:before {
 	content:"\f30f";
 }
 
 
-.icon-tv:before {
+.icon-tux:before {
 	content:"\f310";
 }
 
 
-.icon-twitter:before {
+.icon-tv:before {
 	content:"\f311";
 }
 
 
-.icon-twitter2:before {
+.icon-twitter:before {
 	content:"\f312";
 }
 
 
-.icon-twitter3:before {
+.icon-twitter2:before {
 	content:"\f313";
 }
 
 
-.icon-umbrella:before {
+.icon-twitter3:before {
 	content:"\f314";
 }
 
 
-.icon-underline:before {
+.icon-umbrella:before {
 	content:"\f315";
 }
 
 
-.icon-undo:before {
+.icon-underline:before {
 	content:"\f316";
 }
 
 
-.icon-undo2:before {
+.icon-undo:before {
 	content:"\f317";
 }
 
 
-.icon-unlock-fill:before {
+.icon-undo2:before {
 	content:"\f318";
 }
 
 
-.icon-unlock-stroke:before {
+.icon-unlock-fill:before {
 	content:"\f319";
 }
 
 
-.icon-unlocked:before {
+.icon-unlock-stroke:before {
 	content:"\f31a";
 }
 
 
-.icon-upload:before {
+.icon-unlocked:before {
 	content:"\f31b";
 }
 
 
-.icon-upload2:before {
+.icon-upload:before {
 	content:"\f31c";
 }
 
 
-.icon-upload3:before {
+.icon-upload2:before {
 	content:"\f31d";
 }
 
 
-.icon-user:before {
+.icon-upload3:before {
 	content:"\f31e";
 }
 
 
-.icon-user2:before {
+.icon-user:before {
 	content:"\f31f";
 }
 
 
-.icon-user3:before {
+.icon-user2:before {
 	content:"\f320";
 }
 
 
-.icon-user4:before {
+.icon-user3:before {
 	content:"\f321";
 }
 
 
-.icon-users:before {
+.icon-user4:before {
 	content:"\f322";
 }
 
 
-.icon-users2:before {
+.icon-users:before {
 	content:"\f323";
 }
 
 
-.icon-vimeo:before {
+.icon-users2:before {
 	content:"\f324";
 }
 
 
-.icon-vimeo2:before {
+.icon-vimeo:before {
 	content:"\f325";
 }
 
 
-.icon-vimeo3:before {
+.icon-vimeo2:before {
 	content:"\f326";
 }
 
 
-.icon-volume-decrease:before {
+.icon-vimeo3:before {
 	content:"\f327";
 }
 
 
-.icon-volume-high:before {
+.icon-volume-decrease:before {
 	content:"\f328";
 }
 
 
-.icon-volume-increase:before {
+.icon-volume-high:before {
 	content:"\f329";
 }
 
 
-.icon-volume-low:before {
+.icon-volume-increase:before {
 	content:"\f32a";
 }
 
 
-.icon-volume-medium:before {
+.icon-volume-low:before {
 	content:"\f32b";
 }
 
 
-.icon-volume-mute:before {
+.icon-volume-medium:before {
 	content:"\f32c";
 }
 
 
-.icon-volume-mute2:before {
+.icon-volume-mute:before {
 	content:"\f32d";
 }
 
 
-.icon-volume:before {
+.icon-volume-mute2:before {
 	content:"\f32e";
 }
 
 
-.icon-wand:before {
+.icon-volume:before {
 	content:"\f32f";
 }
 
 
-.icon-warning:before {
+.icon-wand:before {
 	content:"\f330";
 }
 
 
-.icon-windows:before {
+.icon-warning:before {
 	content:"\f331";
 }
 
 
-.icon-windows8:before {
+.icon-windows:before {
 	content:"\f332";
 }
 
 
-.icon-wink:before {
+.icon-windows8:before {
 	content:"\f333";
 }
 
 
-.icon-wink2:before {
+.icon-wink:before {
 	content:"\f334";
 }
 
 
-.icon-wondering:before {
+.icon-wink2:before {
 	content:"\f335";
 }
 
 
-.icon-wondering2:before {
+.icon-wondering:before {
 	content:"\f336";
 }
 
 
-.icon-wordpress:before {
+.icon-wondering2:before {
 	content:"\f337";
 }
 
 
-.icon-wordpress2:before {
+.icon-wordpress:before {
 	content:"\f338";
 }
 
 
-.icon-wrench:before {
+.icon-wordpress2:before {
 	content:"\f339";
 }
 
 
-.icon-x-altx-alt:before {
+.icon-wrench:before {
 	content:"\f33a";
 }
 
 
-.icon-x:before {
+.icon-x-altx-alt:before {
 	content:"\f33b";
 }
 
 
-.icon-xing:before {
+.icon-x:before {
 	content:"\f33c";
 }
 
 
-.icon-xing2:before {
+.icon-xing:before {
 	content:"\f33d";
 }
 
 
-.icon-yahoo:before {
+.icon-xing2:before {
 	content:"\f33e";
 }
 
 
-.icon-yelp:before {
+.icon-yahoo:before {
 	content:"\f33f";
 }
 
 
-.icon-youtube:before {
+.icon-yelp:before {
 	content:"\f340";
 }
 
 
-.icon-youtube2:before {
+.icon-youtube:before {
 	content:"\f341";
 }
 
 
-.icon-zoomin:before {
+.icon-youtube2:before {
 	content:"\f342";
 }
 
 
-.icon-zoomout:before {
+.icon-zoomin:before {
 	content:"\f343";
+}
+
+
+.icon-zoomout:before {
+	content:"\f344";
 }
 
 		</style>
@@ -3836,6 +3841,8 @@
 				<div class="icons__item" data-name="point-right"><i class="icon icon-point-right"></i> icon-point-right</div>
 			
 				<div class="icons__item" data-name="point-up"><i class="icon icon-point-up"></i> icon-point-up</div>
+			
+				<div class="icons__item" data-name="power-off"><i class="icon icon-power-off"></i> icon-power-off</div>
 			
 				<div class="icons__item" data-name="powercord"><i class="icon icon-powercord"></i> icon-powercord</div>
 			
