--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -1,51 +1,45 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container page-container">
-
-<div class="row">
-<div class="col-lg-12 col-sm-12">
-  <h1 class="page-title">Form responses</h1>
-</div>
-
-<div class="col-lg-12 col-sm-12">
-  <h3> This is the from name </h3>
-</div>
-
-<div class="col-lg-12 col-sm-12">
-  <div class="row">
-    <div class="col-lg-3 col-sm-3"></div>
-    <div class="col-lg-3 col-sm-3"></div>
-    <div class="col-lg-3 col-sm-3"></div>
-    <div class="col-lg-3 col-sm-3"></div>
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-10 col-sm-10 main-content-wrap">
+  <div class="main-content">
+    <div class="row-fluid">
+      <div class="col-lg-12 col-sm-12">
+        <h1 class="page-title">Form responses</h1>
+      </div>
+      <div class="col-lg-12 col-sm-12">
+        <h3> This is the from name </h3>
+      </div>
+      <div class="col-lg-12 col-sm-12">
+        <div class="row">
+          <div class="col-lg-3 col-sm-3"></div>
+          <div class="col-lg-3 col-sm-3"></div>
+          <div class="col-lg-3 col-sm-3"></div>
+          <div class="col-lg-3 col-sm-3"></div>
+        </div>
+      </div>
+      <div class="col-lg-12 col-sm-12">
+        <table class="table">
+          <tr>
+            <th>#</th>
+            <th>Organization</th>
+            <th>User</th>
+            <th>Date</th>
+            <th>Points</th>
+            <th>Responses</th>
+            <th>Actions</th>
+          </tr>
+          <tr ng-repeat="result in results">
+            <td> {{$index + 1}} </td>
+            <td> {{result.form.name}} </td>
+            <td> {{result.user_info.username}}</td>
+            <td> {{getFormatedDate(result.updated)}}</td>
+            <td> {{result.points}}</td>
+            <td> <a href=""> View user responses</a></td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
-
-<div class="col-lg-12 col-sm-12">
-
-
-<table class="table">
-  <tr>
-    <th>#</th>
-    <th>Organization</th>
-    <th>User</th>
-    <th>Date</th>
-    <th>Points</th>
-    <th>Responses</th>
-    <th>Actions</th>
-  </tr>
-  <tr ng-repeat="result in results">
-    <td> {{$index + 1}} </td>
-    <td> {{result.form.name}} </td>
-    <td> {{result.user_info.username}}</td>
-    <td> {{getFormatedDate(result.updated)}}</td>
-    <td> {{result.points}}</td>
-    <td> <a href=""> View user responses</a></td>
-    <td></td>
-  </tr>
-</table>
-</div>
-
-</div>
-</div>
-
-<div ng-include="'components/footer/footer.html'"></div>
