--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -88,7 +88,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <button class="btn btn-info" ng-click="attachCertificate()"> + Add certificate</button>
+                  <button class="btn btn-info" ng-click="attachCertificate()"> + Add/Modify certificate</button>
                 </div>
               </div>
               <div class="panel panel-success">
