--- a/client/app/controllers/admin/admin.html
+++ b/client/app/controllers/admin/admin.html
@@ -1,14 +1,15 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container page-container">
-  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
-  <ul class="list-group">
-    <li class="list-group-item" ng-repeat="user in users">
-        <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
-        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-    </li>
-  </ul>
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-10 col-sm-10 main-content-wrap">
+    <div class="main-content">
+      <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="user in users">
+          <strong>{{user.name}}</strong><br>
+          <span class="text-muted">{{user.email}}</span>
+          <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
-
-<div ng-include="'components/footer/footer.html'"></div>
