--- a/client/app/controllers/certificate/attach.certificate.html
+++ b/client/app/controllers/certificate/attach.certificate.html
@@ -23,5 +23,5 @@
 </div>
 <div class="modal-footer">
   <a class="btn btn-link" ng-click="cancel()">Cancel</a>
-  <button class="btn btn-primary" ng-click="ok()">Add</button>
+  <button class="btn btn-primary" ng-click="ok()">Add/Modify</button>
 </div>
