--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -4,16 +4,31 @@
     <div class="main-content">
       <div class="row">
         <div class="col-lg-12 col-sm-12">
-          <h1 class="page-title">Certificates</h1>
+          <h1 class="main-page-title">Certificates</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12 oh">
-          <form class="form" ng-if="isAdmin()" >
-            <!--       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform"> -->
-            <button type="submit" class="btn btn-primary" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em>  Add new certificate</button>
-          </form>
+      <div class="row-fluid">
+        <div class="col-lg-10 col-sm-10 oh">
+          <br>
+          <div class="row-fluid oh">
+            <div class="col-lg-7 col-sm-7">
+              <div class="iconed-input">
+                <input type="text" class="form-control" ng-model="query.name" placeholder="Search for certificates">
+                <em class="icon icon-search"></em>
+              </div>
+            </div>
+            <div class="col-lg-2">
+            </div>
+            <div class="col-lg-3">
+              <form class="form" ng-if="isAdmin()" >
+                <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
+              </form>
+            </div>
+          </div>
+
+
           <div class="clearfix"></div>
+          <br>
           <br>
           <div ng-if="certificates.length == 0">
             <div class="empty certificates-empty">
