Adding the certificates empty state

--- a/client/app/controllers/forms/form-admin.html
+++ b/client/app/controllers/forms/form-admin.html
@@ -9,9 +9,14 @@
       </div>
     </div>
     <div class="main-content">
+      <div class="row-fulid oh">
+        <div class="col-lg-12 col-sm-12">
+          <h1 class="main-page-title">Forms</h1>
+        </div>
+      </div>
       <br>
-      <div class="row-fluid oh">
-        <div class="col-lg-7 col-sm-7">
+      <div class="row-fluid">
+        <div class="col-lg-7 col-sm-7 oh">
           <div class="iconed-input">
             <input type="text" class="form-control" ng-model="query.name" placeholder="Search for forms">
             <em class="icon icon-search"></em>
