--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -1,8 +1,15 @@
 <div class="row-fluid">
   <div ng-include="'components/sidebar/sidebar.html'"></div>
   <div class="col-lg-10 col-sm-10 main-content-wrap">
-    <div class="main-content">
-      <div class="row">
+    <div class="main-content" ng-if="certificates.length == 0">
+      <br><br><br><br>
+      <div class="text-center">
+        <img src="assets/images/certificate-empty.svg" alt="" class="img-responsive" style="margin: 10px auto;">
+        <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
+      </div>
+    </div>
+    <div class="main-content" ng-if="certificates.length > 0">
+      <div class="row-fulid">
         <div class="col-lg-12 col-sm-12">
           <h1 class="main-page-title">Certificates</h1>
         </div>
@@ -25,23 +32,6 @@
               </form>
             </div>
           </div>
-
-
-          <div class="clearfix"></div>
-          <br>
-          <br>
-          <div ng-if="certificates.length == 0">
-            <div class="empty certificates-empty">
-              <img src="assets/images/empty/no_certificates_text.svg" alt="" class="empty-hint">
-              <div class="empty-image">
-                <img src="assets/images/empty/no_certificates.svg" alt="" class="empty">
-                <div class="empty-text">
-                  Your don't have any certificates right now!
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- <div ng-if="certificates.length > 0"> -->
           <div>
             <table class="table table-striped table-hover">
               <thead>
