--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -9,15 +9,15 @@
       </div>
     </div>
     <div class="main-content" ng-if="certificates.length > 0">
-      <div class="row-fulid">
+      <div class="row-fulid oh">
         <div class="col-lg-12 col-sm-12">
           <h1 class="main-page-title">Certificates</h1>
         </div>
       </div>
+      <br>
       <div class="row-fluid">
         <div class="col-lg-10 col-sm-10 oh">
-          <br>
-          <div class="row-fluid oh">
+          <div class="row-fluid">
             <div class="col-lg-7 col-sm-7">
               <div class="iconed-input">
                 <input type="text" class="form-control" ng-model="query.name" placeholder="Search for certificates">
@@ -32,6 +32,9 @@
               </form>
             </div>
           </div>
+          <div class="clearfix"></div>
+          <hr>
+          <br>
           <div>
             <table class="table table-striped table-hover">
               <thead>
