--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -2,22 +2,37 @@
   <div ng-include="'components/sidebar/sidebar.html'"></div>
   <div class="col-lg-10 col-sm-10 main-content-wrap">
   <div class="main-content">
-    <div class="row-fluid">
-      <div class="col-lg-12 col-sm-12">
-        <h1 class="page-title">Form responses</h1>
-      </div>
-      <div class="col-lg-12 col-sm-12">
-        <h3> This is the from name </h3>
-      </div>
-      <div class="col-lg-12 col-sm-12">
-        <div class="row">
-          <div class="col-lg-3 col-sm-3"></div>
-          <div class="col-lg-3 col-sm-3"></div>
-          <div class="col-lg-3 col-sm-3"></div>
-          <div class="col-lg-3 col-sm-3"></div>
+
+      <div class="row-fulid oh">
+        <div class="col-lg-12 col-sm-12">
+          <h1 class="main-page-title">Responses</h1>
         </div>
       </div>
+      <br>
+
+
+
+    <div class="row-fluid">
+
+
+
+
       <div class="col-lg-12 col-sm-12">
+        <h1 class="main-page-title sub"><span class="text-muted">Form –</span>  This is the from name </h3>
+      </div>
+
+
+
+      <div class="clearfix"></div>
+      <br>
+
+      <div class="" ng-if="results.length == 0">
+        <br><br>
+        <div class="text-center">
+          <img src="assets/images/results-empty.svg" alt="" class="img-responsive" style="margin: 0 auto;">
+        </div>
+      </div>
+      <div class="col-lg-12 col-sm-12" ng-if="results.length > 0">
         <table class="table">
           <tr>
             <th>#</th>
