--- a/client/app/controllers/forms/form-admin.html
+++ b/client/app/controllers/forms/form-admin.html
@@ -8,7 +8,7 @@
         <button type="submit" class="btn btn-primary" ng-click="addform()"> <em class="icon icon-plus"></em> &nbsp;&nbsp; Add new form</button>
       </div>
     </div>
-    <div class="main-content">
+    <div class="main-content" ng-if="forms.length > 0">
       <div class="row-fulid oh">
         <div class="col-lg-12 col-sm-12">
           <h1 class="main-page-title">Forms</h1>
