Fixing the svg's sketch - sucks with svg

--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -4,7 +4,7 @@
     <div class="main-content" ng-if="certificates.length == 0">
       <br><br><br><br>
       <div class="text-center">
-        <img src="assets/images/certificate-empty.svg" alt="" class="img-responsive" style="margin: 10px auto;">
+        <img src="assets/images/certificate-empty.svg" alt="" class="img-responsive" style="margin: 10px auto; max-width: 900px;">
         <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
       </div>
     </div>
