--- a/client/app/controllers/forms/form-admin.html
+++ b/client/app/controllers/forms/form-admin.html
@@ -4,7 +4,7 @@
     <div class="main-content" ng-if="forms.length <= 0">
       <br><br><br><br>
       <div class="text-center">
-        <img src="assets/images/form-empty.svg" alt="" class="img-responsive" style="margin: 10px auto;">
+        <img src="assets/images/form-empty.svg" alt="" class="img-responsive" style="margin: 10px auto; max-width: 900px;">
         <button type="submit" class="btn btn-primary" ng-click="addform()"> <em class="icon icon-plus"></em> &nbsp;&nbsp; Add new form</button>
       </div>
     </div>
