--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -29,7 +29,7 @@
       <div class="" ng-if="results.length == 0">
         <br><br>
         <div class="text-center">
-          <img src="assets/images/results-empty.svg" alt="" class="img-responsive" style="margin: 0 auto;">
+          <img src="assets/images/results-empty.svg" alt="" class="img-responsive" style="margin: 0 auto; max-width: 700px;">
         </div>
       </div>
       <div class="col-lg-12 col-sm-12" ng-if="results.length > 0">
