--- a/client/app/controllers/forms/form-normal.html
+++ b/client/app/controllers/forms/form-normal.html
@@ -1,43 +1,63 @@
-<div class="container page-container">
-  <div class="row">
-    <div class="col-lg-7 col-sm-7 oh">
-      <div ng-if="submissions.length == 0">
-        <br><br><br>
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-6 col-sm-6 main-content-wrap">
+    <div class="main-content" ng-if="submissions.length <= 0">
+      <br><br><br><br>
+      <div class="text-center">
         <img src="assets/images/submissions-empty.svg" alt="" class="img-responsive pull-right" style="margin: 30px auto; max-width: 500px">
       </div>
-      <div ng-if="submissions.length > 0">
-        <h1 class="page-title"> Your Submissions</h1>
-        <table class="table table-wide">
-          <thead>
-            <tr>
-              <th> Certification Name </th>
-              <th> Score </th>
-              <th> Last activity </th>
-              <th> Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="submission in submissions">
-              <td>
-                <a ng-href="{{'/forms/'+ submission.form._id + '/' + submission._id}}">{{submission.form.name}}</a>
-                <span class="text-info" ng-if="submission.status == 'Unpublished'">
-                <em class="icon icon-pencil2"></em>
-                </span>
-              </td>
-              <td>
-                {{submission.points}}
-              </td>
-              <td> {{getFormatedDate(submission.updated)}}</td>
-              <td><a href='' ng-click="removeResult(submission)" class="btn btn-xs"><em class="icon icon-remove"></em></a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+    </div>
+    <div class="main-content" ng-if="submissions.length > 0">
+      <div class="row-fulid oh">
+        <div class="col-lg-12 col-sm-12">
+          <h1 class="main-page-title">Your Submission</h1>
+        </div>
+      </div>
+      <br>
+      <div class="row-fluid">
+        <div class="col-lg-7 col-sm-7 oh">
+          <div class="iconed-input">
+            <input type="text" class="form-control" ng-model="query.name" placeholder="Search for forms">
+            <em class="icon icon-search"></em>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="froms-list">
+        <div ng-if="submissions.length > 0">
+          <div class="tabled-row-filter">
+            <span class="label label-info" ng-class="{selected: !querys.status}" ng-click="querys.status = undefined">All</span>
+            <span class="label label-info" ng-class="{selected: querys.status == 'Published'}" ng-click="querys.status = 'Published'">Submitted</span>
+            <span class="label label-info" ng-class="{selected: querys.status == 'Unpublished'}" ng-click="querys.status = 'Unpublished'">Drafts</span>
+          </div>
+          <div class="row-fluid tabled-row-heading">
+            <div class="col-lg-4 col-sm-4"><strong>Certification Name</strong></div>
+            <div class="col-lg-3 col-sm-3"><strong>Points</strong></div>
+            <div class="col-lg-4 col-sm-4"><strong>Updated</strong></div>
+            <!-- <div class="col-lg-2 col-sm-2"></div> -->
+          </div>
+          <div class="clearfix"></div>
+          <div class="row-fluid tabled-row" ng-repeat="submission in submissions | filter: query| filter:querys.status:true" ng-click="slideInFormDetails(form)">
+            <div class="col-lg-4 col-sm-4">
+              <a ng-href="{{'/forms/'+ submission.form._id + '/' + submission._id}}">{{submission.form.name}}</a>
+              <span class="text-info" ng-if="form.status == 'Unpublished'">
+              <em class="icon icon-pencil2"></em>
+              </span>
+            </div>
+            <div class="col-lg-3 col-sm-3">
+              {{submission.points}}
+            </div>
+            <div class="col-lg-4 col-sm-4">{{getFormatedDate(submission.updated)}}</div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-lg-5 oh">
-      <h1 class="page-title"> Availbale Certification Programs </h1>
-      <div ng-if="forms.length == 0">
+  </div>
+  <div class="col-lg-4 col-sm-4">
+    <div class="main-content-right-side">
+      <h1 class="main-page-title">Available certifications</h1>
+      <div>
+              <div ng-if="forms.length == 0">
         <div class="empty forms-empty">
           <img src="assets/images/empty/no_forms_text.svg" alt="" class="empty-hint">
           <div class="empty-image">
@@ -59,7 +79,8 @@
           </div>
         </div>
       </div>
+      </div>
+
     </div>
   </div>
 </div>
-<div ng-include="'components/footer/footer.html'" ng-if="!isAdmin()"></div>
