--- a/client/app/controllers/formshow/formshow.html
+++ b/client/app/controllers/formshow/formshow.html
@@ -1,6 +1,11 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container page-container form-show">
-  <div class="row">
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-10 col-sm-10 main-content-wrap">
+
+  <div class="main-content">
+
+
+  <div class="row-fluid">
   <div class="form-meta-container">
     <div class="form-meta">
       <div class="col-lg-9 col-sm-9">
@@ -18,7 +23,7 @@
     </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row-fluid">
     <div class="form-sections">
       <div class="col-lg-12 col-sm-12">
         <div class="form-show-container">
@@ -32,7 +37,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
   <div class="col-lg-12 col-sm-12">
   <div class="form-show-container">
   <div ng-repeat="section in form.sections" ng-if='section.active'>
@@ -63,7 +68,8 @@
   </div>
 </div>
 </div>
-
+</div>
 </div>
 
-<div ng-include="'components/footer/footer.html'"></div>
+</div>
+</div>
