--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -168,7 +168,7 @@
                   <div class="form-group">
                     <label for="" class="col-lg-3 col-sm-3 control-label">Question Title</label>
                     <div class="col-lg-8 col-sm-8">
-                      <input type="text" class="form-control" id="" placeholder="Untitled question" ng-model="field.label">
+                      <input type="text" class="form-control" id="" placeholder="Untitled question" focus-on-show ng-model="field.label">
                     </div>
                   </div>
                   <div class="form-group">
@@ -195,7 +195,7 @@
                   <div class="form-group">
                     <div class="col-lg-1 col-sm-1"></div>
                     <div class="col-lg-9 col-sm-9">
-                      <button class="btn btn-info btn-sm" type="button" ng-disabled="!isValidField(field)" ng-click="toggleField(field, section)" > Add </button>
+                      <button class="btn btn-info btn-sm" type="button" ng-disabled="!isValidField(field)" ng-click="toggleField(field, section)" > Done </button>
                       &nbsp;&nbsp;&nbsp;&nbsp;
                       <input type="checkbox" class="checkbox-small" name="bonusCheckboxe" type="checkbox" id="bonusCheckboxe" ng-model="field.is_bonus">
                       <label for="bonusCheckboxe" class="smallText">Bonus quesiton</label>
