--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -28,7 +28,7 @@
       <div class="col-lg-10">
         <div class="multipleOptions" ng-repeat="choice in field.choices">
           <span class="optionIndex">{{$index + 1}}. </span>
-          <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+          <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
@@ -48,7 +48,7 @@
       <div class="col-lg-10">
         <div class="multipleOptions" ng-repeat="choice in field.choices">
           <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
-          <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+          <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
@@ -71,7 +71,7 @@
       <div class="col-lg-10">
         <div class="multipleOptions" ng-repeat="choice in field.choices">
           <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
-          <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+          <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
