--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -24,6 +24,8 @@
             <h3 class="response-section-title">{{section.title}}</h3>
             <div class="response-field" ng-repeat="field in section.fields">
               <label for="">{{field.label}}</label>
+              <p>{{field.response}}</p>
+              <br>
             </div>
 
           </div>
