--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,8 @@
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
       <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
       <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
+      <script src="bower_components/waypoints/lib/jquery.waypoints.js"></script>
+      <script src="bower_components/waypoints/lib/shortcuts/sticky.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
